--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -27,9 +27,12 @@
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profile</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="{% url "account:log_in"%}">Log In </a>
+                    {% if request.user.is_authenticated %}
                     <a class="dropdown-item" href="{% url "account:log_out"%}">Log out</a>
-                    <a class="dropdown-item" href="{% url "account:register"%}">Register</a>
+                      {% else %}
+                      <a class="dropdown-item" href="{% url "account:log_in"%}">Log In </a>
+                      <a class="dropdown-item" href="{% url "account:register"%}">Register</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
