--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,9 @@
 <ul>
     <li> {{request.user}} </li>
     <li> {{request.user.email}} </li>
+    <li> {{request.user.first_name}} </li>
+    <li> {{request.user.last_name}} </li>
+    <li></li>
 </ul>
 </body>
 </html>
