--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,7 +21,7 @@
         <li> {{request.user.email}} </li>
         <li> {{request.user.first_name}} </li>
         <li> {{request.user.last_name}} </li>
-        <li><a href="{% url "account:edit" %}">edit</a></li>
+        <li><a href="{% url "account:edit" %}">edit profile</a></li>
         <li><a href="{% url "account:edit-password" %}">edit password</a></li>
     </ul>
 </div>
