--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
                         {% if messages %}
                             <ul class="messages alert alert-danger">
                                 {% for message in messages %}
-                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}><i class="fa fa-exclamation-triangle" aria-hidden="true">&nbsp;</i>{{ message }}</li>
                                 {% endfor %}
                             </ul>
                         {% endif %}
@@ -20,10 +20,13 @@
                 {% for obj in objectlist  %}  
                 <div class=" card">
                         <div class="card-body ">
-                          <h4 class="card-title"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></h4>
+                          <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></h4>
                           <p class="card-text">{{obj.post | linebreaks | truncatechars:100}}</p><hr>
-                          <p class="card-text "><small class="text-muted">{{obj.pub_date}} | {{obj.pub_date  | timesince}}</small></p>
-                          <p>{{ request.user.get_profile.whatever }}</p>
+                          <p class="card-text "><small class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date}} | {{obj.pub_date  | timesince}} <br>
+                            <i class="fa fa-comments" aria-hidden="true">&nbsp;</i> 2
+                            <i class="fa fa-thumbs-up" aria-hidden="true">&nbsp;</i> 12
+                            <i class="fa fa-share-alt" aria-hidden="true">&nbsp;</i> 23
+                        </small>
                         </div>
                 </div>             
                     {% endfor %}
