--- a/templates/links.html
+++ b/templates/links.html
@@ -9,5 +9,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 <script src="{% static "js/jquery.waypoints.min.js" %}"></script>
 <script src="{% static "js/infinite.min.js" %}"></script>
-
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
