--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,19 +1,12 @@
 {% include "links.html" %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span></button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="{% url "base" %} ">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="  ">Link</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Disabled</a>
+                <a class="nav-link" href="{% url "base" %} "><i class="fa fa-home" aria-hidden="true"></i></a>
                 </li>
                 {% if request.user.is_authenticated %}
                 <li class="nav-item">
@@ -23,15 +16,21 @@
         </ul>
             <form class="form-inline my-lg-0" method="GET">
                 {% csrf_token %}
-                <input id="search" class="form-control mr-sm-2" type="text" name="search" placeholder="Search" aria-label="Search">
+                <span>
+                    
+                    <input id="search" class="form-control mr-sm-2" type="text" name="search" placeholder="Search" aria-label="Search">
+                    {% comment %} <i class="fa fa-search" aria-hidden="true"></i> {% endcomment %}
+                </span>
                 {% comment %} <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> {% endcomment %}
             </form>
             <div class="nav-item dropdown">
                 {% if request.user.is_authenticated %}
-                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{request.user}}</a>
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-user" aria-hidden="true">&nbsp;</i>
+                    {{request.user}}</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{% url "account:profile"%}">Profile</a>
-                        <a class="dropdown-item" href="{% url "account:log_out"%}">Log out</a>
+                            <p class="dropdown-item" > <i  class="fa fa-user" aria-hidden="true">&nbsp;</i> <a href="{% url "account:profile"%}">Profile</a></p>
+                            <p class="dropdown-item"><i class="fa fa-sign-out" aria-hidden="true">&nbsp;</i> <a  href="{% url "account:log_out"%}">Log out</a></p>
                         </div>
                 {% else %}
                 <a class="" href="{% url "account:log_in" %}">Log in</a> | <a href="{% url "account:register" %}">Register</a>    
@@ -43,6 +42,19 @@
             </div>                           
 
 {% comment %}================> Search Content JS / Ajax <================ {% endcomment %}
+<style>
+.fa{
+     font-size: 16px;
+     color: grey;
+        }
+.fa-home{
+    font-size: 26px; 
+    color: grey;
+}
+:hover.fa-home{
+    color:white;
+}    
+</style>
 <script>
         $(document).ready(function(){
             $(".dropdown-toggle").dropdown();
@@ -61,6 +73,7 @@ $(function() {
         });
     });
 });
+
 function searchSuccess(data, textStatus, jqXHR)
 {
     $('#search-results').html(data)
