--- a/templates/detail_view.html
+++ b/templates/detail_view.html
@@ -7,7 +7,7 @@
         {% if messages %}
         <ul class="messages alert alert-success">
             {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}><i class="fa fa-check" aria-hidden="true"></i>{{ message }}</li>
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}><i class="fa fa-check" aria-hidden="true">&nbsp;</i>{{ message }}</li>
             {% endfor %}
         </ul>
         {% endif %}      
