--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -29,8 +29,8 @@
                         <i class="fa fa-user" aria-hidden="true">&nbsp;</i>
                     {{request.user}}</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <p class="dropdown-item" > <i  class="fa fa-user" aria-hidden="true">&nbsp;</i> <a href="{% url "account:profile"%}">Profile</a></p>
-                            <p class="dropdown-item"><i class="fa fa-sign-out" aria-hidden="true">&nbsp;</i> <a  href="{% url "account:log_out"%}">Log out</a></p>
+                            <p class="dropdown-item" >  <a href="{% url "account:profile"%}"><i  class="fa fa-user" aria-hidden="true">&nbsp;</i> Profile</a></p>
+                            <p class="dropdown-item"> <a  href="{% url "account:log_out"%}"><i class="fa fa-sign-out" aria-hidden="true">&nbsp;</i> Log out</a></p>
                         </div>
                 {% else %}
                 <a class="" href="{% url "account:log_in" %}">Log in</a> | <a href="{% url "account:register" %}">Register</a>    
