--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -6,7 +6,7 @@
         <div class="container jumbotron">
 
             <h1>Write Your Thoughts</h1>
-            <form action="" method="POST">
+            <form action="" enctype="multipart/form-data" method="POST">
                 {% csrf_token %}
                 {{form | crispy }}
                 <input style="cursor: pointer" class="btn btn-primary" type="submit" value="Create Post">
