--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,17 +14,31 @@
             {% endif %}
 <div class="container jumbotron">
 
-    <ul>
-        <li><i  class="fa fa-user" aria-hidden="true">&nbsp;</i> {{request.user}} </li>
-        <li><i  class="fa fa-envelope" aria-hidden="true">&nbsp;</i> {{request.user.email}} </li>
-        <li><i  class="fa fa-info-circle" aria-hidden="true">&nbsp;</i> {{request.user.first_name}} </li>
-        <li><i  class="fa fa-info-circle" aria-hidden="true">&nbsp;</i> {{request.user.last_name}} </li>
-        <li><a href="{% url "account:edit" %}"><i  class="fa fa-pencil" aria-hidden="true">&nbsp;</i> edit profile</a></li>
-        <li><a href="{% url "account:edit-password" %}"><i  class="fa fa-lock" aria-hidden="true">&nbsp;</i> edit password</a></li>
+    <ul class="list-group">
+        <li class="list-group-item"><i  class="fa fa-user" aria-hidden="true">&nbsp;</i> {{request.user}} </li>
+        <li class="list-group-item"><i  class="fa fa-envelope" aria-hidden="true">&nbsp;</i> {{request.user.email}} </li>
+        <li class="list-group-item"><i  class="fa fa-info-circle" aria-hidden="true">&nbsp;</i> {{request.user.first_name}}, {{request.user.last_name}} </li>
+        <li class="list-group-item"><a href="{% url "account:edit" %}"><i  class="fa fa-pencil" aria-hidden="true">&nbsp;</i> edit profile</a></li>
+        <li class="list-group-item"><a href="{% url "account:edit-password" %}"><i  class="fa fa-lock" aria-hidden="true">&nbsp;</i> edit password</a></li>
+
+        <li class="list-group-item">
+
+            <p>{{request.user.profile.bio}}</p>
+
+        <img src="{{ request.user.profile.prof_image.url }}" class="img-fluid" alt="Responsive image">
+
+
+
+
+
     </ul>
 
     <div class="container jumbotron">
+                    <h3>Your Posts, {{request.user}}</h3>
+                    <hr>
+                  
     {% for obj in user_post %}
+
                 <div class=" card">
                         <div class="card-body ">
                           <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></h4>
