profile on progress

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,36 +15,41 @@
                                 {% endfor %}
                             </ul>
                         {% endif %}
+
         <div class="container jumbotron infinite-container">               
             <div class="card-columns infinite-item ">
                 {% for obj in objectlist  %}  
                 {% if obj.user == request.user %}
-                <div class=" card" style="color:white; background-color: #333; border-color: #333;">
-                        <div class="card-body ">
-                            {%if obj.image%}
-                            <img src="{{ obj.image.url }}" class="img-fluid" alt="Responsive image">
-                            {%endif%}
-                          <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></h4>
+                        <div class=" card">
+                            {% if obj.image %}
+                            <img class="card-img-top" src="{{ obj.image.url }}"  alt="Card image cap">
+                            {% endif %}
+                        <div class="card-body" style="color:white; background-color: #333; border-color: #333;" >
+                          <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}" style="color:white;" >{{obj.title}}</a></h4>
                           <p class="card-text">{{obj.post | linebreaks | truncatechars:100}}</p><hr>
-                          <p class="card-text "><small class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date}} | {{obj.pub_date  | timesince}} <br>
+                          <p class="card-text "><small style="color: red; class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date  | timesince}} ago</small> <br>
+                            <small>
                             <i class="fa fa-comments" aria-hidden="true">&nbsp;</i> 2
                             <i class="fa fa-thumbs-up" aria-hidden="true">&nbsp;</i> 12
-                            <i class="fa fa-share-alt" aria-hidden="true">&nbsp;</i> 23
-                        </small>
+                            <i class="fa fa-share-alt" aria-hidden="true">&nbsp;</i> 23<p><img src="{{obj.user.profile.prof_image.url}}" width="20px" height="20px" class="img-circle" alt="Responsive image"> {{obj.user}}
+                            </p>  
+                        </small></p>
                         </div>
-                </div>             
+                </div>                       
                 {% else %}
                 <div class=" card">
+                            {% if obj.image %}
+                            <img class="card-img-top" src="{{ obj.image.url }}"  alt="Card image cap">
+                            {% endif %}
                         <div class="card-body ">
-                            {%if obj.image%}
-                            <img src="{{ obj.image.url }}" class="img-fluid" alt="Responsive image">
-                            {%endif%}
-                          <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></h4>
+                          <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}" style="color:black;" >{{obj.title}}</a></h4>
                           <p class="card-text">{{obj.post | linebreaks | truncatechars:100}}</p><hr>
-                          <p class="card-text "><small class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date}} | {{obj.pub_date  | timesince}} <br>
+                          <p class="card-text "><small style="color: red; class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date  | timesince}} ago</small><br>
+                            <small>
                             <i class="fa fa-comments" aria-hidden="true">&nbsp;</i> 2
                             <i class="fa fa-thumbs-up" aria-hidden="true">&nbsp;</i> 12
-                            <i class="fa fa-share-alt" aria-hidden="true">&nbsp;</i> 23<p>by {{obj.user}}</p>  
+                            <i class="fa fa-share-alt" aria-hidden="true">&nbsp;</i> 23<p><img src="{{obj.user.profile.prof_image.url}}" width="20px" height="20px" class="img-circle" alt="Responsive image"> {{obj.user}}
+                            </p>  
                         </small></p>
                         </div>
                 </div>             
