--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -7,12 +7,12 @@
     <title>Blog | {{title}} </title>
 </head>
 <div class="container jumbotron col-6 col-md-4">
-    <form action="" method="POST">
+    <form action="" enctype="multipart/form-data" method="POST">
         <small>
             <h2 class="">{{title}}</h2></small>
         <hr>
         {% csrf_token %}
         {{form | crispy }}
-        <input style="cursor: pointer;" enctype="multipart/form-data" class="btn btn-primary" type="submit" value="{{title}}">
+        <input style="cursor: pointer;"  class="btn btn-primary" type="submit" value="{{title}}">
     </form>
 </div>
