--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -26,7 +26,10 @@
             <div class="nav-item dropdown">
                 {% if request.user.is_authenticated %}
                 <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-user" aria-hidden="true">&nbsp;</i>
+                    
+                {% if request.user.profile.prof_image %}
+                <img  src="{{ request.user.profile.prof_image.url }}" width="25px" height="25px" alt="Responsive image" class="img-circle">
+                    {% endif %}
                     {{request.user}}</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <p class="dropdown-item" >  <a href="{% url "account:profile"%}"><i  class="fa fa-user" aria-hidden="true">&nbsp;</i> Profile</a></p>
@@ -35,6 +38,7 @@
                 {% else %}
                 <a class="" href="{% url "account:log_in" %}">Log in</a> | <a href="{% url "account:register" %}">Register</a>    
                 {% endif %}
+                </div>
             </div>
         </div>
 </nav>
@@ -53,7 +57,10 @@
 }
 :hover.fa-home{
     color:white;
-}    
+}
+.img-circle{
+    border-radius: 50%;
+}
 </style>
 <script>
         $(document).ready(function(){
