--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,50 +12,255 @@
                 {% endfor %}
             </ul>
             {% endif %}
-<div class="container jumbotron">
 
-    <ul class="list-group">
-        <li class="list-group-item"><i  class="fa fa-user" aria-hidden="true">&nbsp;</i> {{request.user}} </li>
-        <li class="list-group-item"><i  class="fa fa-envelope" aria-hidden="true">&nbsp;</i> {{request.user.email}} </li>
-        <li class="list-group-item"><i  class="fa fa-info-circle" aria-hidden="true">&nbsp;</i> {{request.user.first_name}}, {{request.user.last_name}} </li>
-        <li class="list-group-item"><a href="{% url "account:edit" %}"><i  class="fa fa-pencil" aria-hidden="true">&nbsp;</i> edit profile</a></li>
-        <li class="list-group-item"><a href="{% url "account:edit-password" %}"><i  class="fa fa-lock" aria-hidden="true">&nbsp;</i> edit password</a></li>
-
-        <li class="list-group-item">
-
-            <p>{{request.user.profile.bio}}</p>
-
-        <img src="{{ request.user.profile.prof_image.url }}" class="img-fluid" alt="Responsive image">
+<!-- ////|||||||||//////////  USER PROFILE  ////|||||||||////////// -->
+     
 
 
+<div class="container">
+    <div class="card hovercard">
 
+        <div class="card-background">
+        {% if request.user.profile.prof_image %}
+        <img src="{{ request.user.profile.prof_image.url }}" class="card-bkimg" alt="Responsive image">
+        {% endif %}
+        </div>
 
+        <div class="useravatar">
+        {% if request.user.profile.prof_image %}
+        <img src="{{ request.user.profile.prof_image.url }}" class="card-bkimg" alt="Responsive image">
+        {% endif %}
+        </div>
 
-    </ul>
+        <div class="card-info"> <span class="card-title">{{request.user}}</span>
 
-    <div class="container jumbotron">
-                    <h3>Your Posts, {{request.user}}</h3>
-                    <hr>
-                  
-    {% for obj in user_post %}
+        </div>
+    </div>
+    <div class="container">
+  <!-- Nav pills -->
+  <ul class="nav nav-pills" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="pill" href="#home">{{request.user}}'s Posts</a>
 
-                <div class=" card">
-                        <div class="card-body ">
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="pill" href="#menu1">{{request.user}}'s Infos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="pill" href="#menu2">Following</a>
+    </li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div id="home" class="container tab-pane active"><br>
+      <h3>{{request.user}}'s Posts</h3>
+      <hr class="hr">
+          
+              {% for obj in user_post %}
+                <div class="card card-inverse">
+                            {% if obj.image%}
+                                <img class="card-img" src="{{obj.image.url}}" alt="Card Image">
+                            {% endif %}
+                        <div class="card-img-overlay">
                           <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></h4>
-                          <p class="card-text">{{obj.post | linebreaks | truncatechars:100}}</p><hr>
+                          <p class="card-text">{{obj.post | linebreaks | truncatechars:100}}</p>
                           <p class="card-text "><small class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date}} | {{obj.pub_date  | timesince}} <br>
                             <i class="fa fa-comments" aria-hidden="true">&nbsp;</i> 2
                             <i class="fa fa-thumbs-up" aria-hidden="true">&nbsp;</i> 12
                             <i class="fa fa-share-alt" aria-hidden="true">&nbsp;</i> 23
+                        </p>
                         </small>
                         </div>
                 </div>
-    {% endfor %}        
+             {% endfor %} 
+    </div>
+    <div id="menu1" class="container tab-pane fade"><br>
+      <h3>{{request.user}}'s Infos</h3>
+      <hr class="hr">
+    <div class="container jumbotron">
+
+    <ul class="list-group">
+
+        <li class="list-group-item"><i  class="fa fa-user" aria-hidden="true">&nbsp;</i> {{request.user}} </li>
+
+        <li class="list-group-item"><i  class="fa fa-envelope" aria-hidden="true">&nbsp;</i>{{request.user.email}}</li>
+
+        <li class="list-group-item"><i  class="fa fa-info-circle" aria-hidden="true">&nbsp;</i>{{request.user.first_name}},{{request.user.last_name}}</li>
+
+        <li class="list-group-item"><a href="{% url "account:edit" %}"><i  class="fa fa-pencil" aria-hidden="true">&nbsp;</i>edit profile</a></li>
+
+        <li class="list-group-item"><a href="{% url "account:edit-password" %}"><i class="fa fa-lock" aria-hidden="true">&nbsp;</i>edit password</a></li>
+
+        <li class="list-group-item"><a href="{% url "account:edit2" %}"><i  class="fa fa-lock" aria-hidden="true">&nbsp;</i> edit2</a></li>
+
+    </ul>
+
     </div>
 
-</div>
-<style>
+    </div>
+    <div id="menu2" class="container jumbotron tab-pane fade"><br>
 
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="
+      carousel">
+    <ol class="carousel-indicators">
+
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+
+    </ol>
+    <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+
+      <img class="d-block img-fluid" src="{{request.user.prof_image.url}}" alt="First slide">
+
+    </div>
+
+    <div class="carousel-item">
+
+      <img class="d-block img-fluid" src="..." alt="Second slide">
+
+    </div>
+
+    <div class="carousel-item">
+
+      <img class="d-block img-fluid" src="..." alt="Third slide">
+
+    </div>
+
+    </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
+   </div>
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+  </div>
+
+
+<style>
+/* USER PROFILE PAGE */
+
+img {
+    padding: 0px;
+    margin: 0px;
+    border-radius: 20px;
+}
+.hr {
+    height: 1px;
+    background-color: grey;
+}
+.nav-pills .nav-link.active{
+    color: black;
+}
+.nav-pills .nav-link.active, .show>.nav-pills .nav-link{
+    background-color: white;
+    border-radius: 0px;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+    border-color: red;
+    color: black;
+}
+ .card {
+    margin-top: 20px;
+    padding: 30px;
+    background-color: rgba(214, 224, 226, 0.2);
+    -webkit-border-top-left-radius:5px;
+    -moz-border-top-left-radius:5px;
+    border-top-left-radius:5px;
+    -webkit-border-top-right-radius:5px;
+    -moz-border-top-right-radius:5px;
+    border-top-right-radius:5px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.card.hovercard {
+    position: relative;
+    padding-top: 0;
+    overflow: hidden;
+    text-align: center;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 1);
+}
+.card.hovercard .card-background {
+    height: 130px;
+}
+.card-background img {
+    -webkit-filter: blur(25px);
+    -moz-filter: blur(25px);
+    -o-filter: blur(25px);
+    -ms-filter: blur(25px);
+    filter: blur(25px);
+    margin-left: -100px;
+    margin-top: -200px;
+    min-width: 130%;
+}
+.card.hovercard .useravatar {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .useravatar img {
+    width: 100px;
+    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
+}
+.card.hovercard .card-info {
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .card-info .card-title {
+    padding:0 5px;
+    font-size: 20px;
+    line-height: 1;
+    color: #262626;
+    background-color: rgba(255, 255, 255, 0.1);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.card.hovercard .card-info {
+    overflow: hidden;
+    font-size: 12px;
+    line-height: 20px;
+    color: #737373;
+    text-overflow: ellipsis;
+}
+.card.hovercard .bottom {
+    padding: 0 20px;
+    margin-bottom: 17px;
+}
+.btn-pref .btn {
+    -webkit-border-radius:0 !important;
+}
 </style>
 </body>
 </html>
