--- a/templates/detail_view.html
+++ b/templates/detail_view.html
@@ -35,7 +35,7 @@
 
                     {% endif %}
                 </table>      
-                {% if instance.image %}
+                {% if instance.user.profile.prof_image %}
                 <h4>
                 by 
                 <img src="{{instance.user.profile.prof_image.url}}" class="img-cirlce" width="30px" height="30px" alt="Responsive image"> {{instance.user}}
@@ -46,7 +46,7 @@
     <style type="text/css">
         .img-cirlce{
             border-radius: 50%;
-
         }
+        
     </style>
     </html>
