--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,8 @@
                     <div class="card-body ">
                         <h4 class="card-title" title="{{obj.title}}"><a href="{{obj.get_absolute_url}}" style="color:black;" >{{obj.title}}</a></h4>
                         <p class="card-text">{{obj.post | linebreaks | truncatechars:100}}</p><hr>
-                        <p class="card-text "><small style="color: red;" class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date  | timesince}} ago</small><br>
+                        <p class="card-text ">
+                            <small style="color: red;" class="text-muted"><i class="fa fa-calendar" aria-hidden="true">&nbsp;</i>{{obj.pub_date  | timesince}} ago</small><br>
                         <small>
                         <i class="fa fa-comments" aria-hidden="true">&nbsp;</i> 2
                         <i class="fa fa-thumbs-up" aria-hidden="true">&nbsp;</i> 12
